# py-arch-lens

./: README.md  pyarchlens.yml  pyproject.toml
.github/workflows/: architecture.yml
docs/: github_actions.md
reports/: architecture_diff.json  dependencies.mmd  json_report.py  pyarchlens_check.json  pyarchlens_report.html  pyarchlens_report.json
src/: __main__.py  analyzer.py  cli.py  config.py  dependency_queries.py  formatting.py  formatting_rules.py  formatting_snapshots.py  graph.py  models.py  parser.py  rules.py  scanner.py  snapshots.py  tui.py  validator.py
src/reports/: check_report.py  html_report.py  json_report.py  mermaid_report.py
tests/: conftest.py  test_analyzer.py  test_dependency_queries.py  test_graph.py  test_mermaid_report.py  test_parser.py  test_rules.py  test_scanner.py  test_snapshots.py  test_validator.py
