[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarchlens"
version = "1.0"
description = "Python architecture analyzer with CLI, TUI and reports"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PyArchLens Team" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
tui = ["textual>=0.70.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
pyarchlens = "pyarchlens.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
